# -libRational-

./: Augey_Boulanger.txt  CMakeLists.txt  readme.md
code/: CMakeLists.txt
code/src/: main.cpp
include/: Ratio.hpp  plop.hpp
myUnitTests/: CMakeLists.txt
myUnitTests/src/: sample_test.cpp
ratio/: CMakeLists.txt  readme.txt
ratio/doc/: Doxyfile-html.cmake
ratio/include/: Ratio.hpp  RatioException.hpp
src/: main.cpp  plop.cpp
unitTests/: CMakeLists.txt
unitTests/src/: sample_test.cpp
